--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -165,6 +165,8 @@ h4 {
 }
 img.avatar {
   width: 3rem;
+  height: 3rem;
+  object-fit: cover;
   border-radius: 50%;
   grid-area: image;
   margin-top: .125rem;
